SGD8-673: Fixed wrapping of content in IE11

--- a/components/31-molecules/teaser/_teaser.scss
+++ b/components/31-molecules/teaser/_teaser.scss
@@ -44,7 +44,8 @@
     .content__second {
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: stretch;
+
 
       > *:last-child {
         margin-bottom: 0;
